--- a/09-CSS-Positioning/homework/homework.css
+++ b/09-CSS-Positioning/homework/homework.css
@@ -5,34 +5,55 @@ archivo en cualquiera de estas carpetas, estás en el lugar equivocado.
 
 /* Ejercicio 1: Centrar el texto en un span */
 
-/* Arrancaremos este ejercicio por vos: */
 #ejercicioUno {
-
+  display: block;
+  text-align: center;
 }
 
-
 /* Ejercicio 2: Posicionar el header */
+#ejercicioDos {
+  display: none;
+}
 
 /* Acá va tu código */
-
-
 
 /* Ejercicio 3: */
+#ejercicioTres {
+  position: relative;
+  left: 200px;
+  top: 100px;
+}
 
 /* Acá va tu código */
-
-
 
 /* Ejercicio 4: */
+#ejercicioCuatro {
+  position: fixed;
+  top: 0;
+  left: 0;
+}
 
 /* Acá va tu código */
-
-
 
 /* Ejercicio 5: */
+#ejercicioCinco {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
 /* Acá va tu código */
 
-
-
 /* Ejercicio 6. */
+#ejercicioCinco {
+  flex-direction: row-reverse;
+}
+
+/* Ejercicio 7 */
+
+#ejercicioSiete {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column-reverse;
+}
